schema/testdata/validation_repeated_scalar_fields/schema.keel
model Foo {
    fields {
        ids ID[]
        texts Text[]
        numbers Number[]
        bools Boolean[]
        passwords Password[]
        datetimes Timestamp[]
        dates Date[]
        secrets Secret[]
    }
}
