schema/testdata/errors/repeated_scalar_fields.keel
model Foo {
    fields {
        //expect-error:13:15:TypeError:Repeated fields of type 'ID' are not supported
        ids ID[]
        //expect-error:15:19:TypeError:Repeated fields of type 'Text' are not supported
        texts Text[]
        //expect-error:17:23:TypeError:Repeated fields of type 'Number' are not supported
        numbers Number[]
        //expect-error:15:22:TypeError:Repeated fields of type 'Boolean' are not supported
        bools Boolean[]
        //expect-error:19:27:TypeError:Repeated fields of type 'Password' are not supported
        passwords Password[]
        //expect-error:19:28:TypeError:Repeated fields of type 'Timestamp' are not supported
        datetimes Timestamp[]
        //expect-error:15:19:TypeError:Repeated fields of type 'Date' are not supported
        dates Date[]
        //expect-error:17:23:TypeError:Repeated fields of type 'Secret' are not supported
        secrets Secret[]
    }
}
